--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -30,9 +30,33 @@
     transform: rotate(360deg);
   }
 } */
-
+.App{
+  margin: 15px 140px;}
+.header-container{
+  display: flex;
+  flex-wrap : wrap
+}
 .nav-container{
+  padding: 0px 0 0 15%; 
   ul{
     display: flex;
+    list-style: none;
+    padding:0;
+    li{
+      padding-right: 50px;
+      line-height: 1em;
+   
+      a{
+        font-size: 18px;
+        font-weight: 400;
+        color: #101010 !important;
+        line-height: 24px;
+        text-decoration: none;
+        text-transform: capitalize;
+      }
+    }
   }
+}
+.right-nav{
+  padding-left: 140px;
 }
