--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,62 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #ffff;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+@import './shared/styles/fonts.scss';
 .App{
   margin: 15px 140px;}
-.header-container{
-  display: flex;
-  flex-wrap : wrap
-}
-.nav-container{
-  padding: 0px 0 0 15%; 
-  ul{
-    display: flex;
-    list-style: none;
-    padding:0;
-    li{
-      padding-right: 50px;
-      line-height: 1em;
-   
-      a{
-        font-size: 18px;
-        font-weight: 400;
-        color: #101010 !important;
-        line-height: 24px;
-        text-decoration: none;
-        text-transform: capitalize;
-      }
-    }
-  }
-}
-.right-nav{
-  padding-left: 140px;
-}
