implement api with store

--- a/my-app/src/components/shipmentDetailsComponent/shipmentDetails.module.scss
+++ b/my-app/src/components/shipmentDetailsComponent/shipmentDetails.module.scss
@@ -34,6 +34,7 @@
                 li {
                     word-wrap: break-word;
                     flex-basis: 10em;
+                    width:22%
                 }
             }
         }
